log
sá., 23 de abr. de 2022 18:47:22: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  8|7
total_score: 10/70
6ab47f0
sá., 23 de abr. de 2022 18:55:42: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|6
total_score: 10/70
aab157b
sá., 23 de abr. de 2022 18:57:01: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|5
total_score: 15/70
35a35b3
sá., 23 de abr. de 2022 18:58:09: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:28: error: 'key' undeclared (first use in this function)
       if (tree->lower_than(key, aux->pair->key) == 1)
                            ^~~
treemap.c:118:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dca7201
sá., 23 de abr. de 2022 19:00:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:31: error: 'TreeNode {aka struct TreeNode}' has no member named 'key'
       if (tree->lower_than(aux->key, aux->pair->key) == 1)
                               ^~
treemap.c:122:49: error: 'key' undeclared (first use in this function)
       else if(tree->lower_than(aux->pair->key , key) == 1)
                                                 ^~~
treemap.c:122:49: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
214b7ea
sá., 23 de abr. de 2022 19:04:58: 
 treemap.c | 19 ++++---------------
 1 file changed, 4 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:119:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
        return minimum(aux);
               ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
28fd5f8
sá., 23 de abr. de 2022 19:05:43: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
1882349
sá., 23 de abr. de 2022 19:08:00: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|5
total_score: 20/70
2d3e00c
sá., 23 de abr. de 2022 19:11:58: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:26: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
                 printf("%d\n", aux->parent->pair->key);
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
a0cc7f4
sá., 23 de abr. de 2022 19:12:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:33: error: expected expression before 'int'
                 printf("%d\n",(*int) aux->parent->pair->key);
                                 ^~~
treemap.c:129:38: error: expected ')' before 'aux'
                 printf("%d\n",(*int) aux->parent->pair->key);
                                      ^~~
Compilation failed
d0c73bd
sá., 23 de abr. de 2022 19:14:18: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:35: error: expected expression before 'int'
                 printf("%d\n", *(*int) aux->parent->pair->key);
                                   ^~~
treemap.c:129:40: error: expected ')' before 'aux'
                 printf("%d\n", *(*int) aux->parent->pair->key);
                                        ^~~
Compilation failed
dc0fc10
sá., 23 de abr. de 2022 19:18:43: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  14|5
total_score: 20/70
e0697d5
sá., 23 de abr. de 2022 19:20:01: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
784d9f5
do., 24 de abr. de 2022  1:28:59: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  14|5
total_score: 20/70
ffddb3f
do., 24 de abr. de 2022  1:30:56: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:134:62: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                                              ^
treemap.c:134:80: error: comparison between pointer and integer [-Werror]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                                                                ^~
treemap.c:134:39: error: passing argument 1 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                       ^
treemap.c:134:39: note: expected 'void *' but argument is of type 'int'
treemap.c:134:22: error: too few arguments to function 'tree->lower_than'
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bb5d6b5
do., 24 de abr. de 2022  1:31:58: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
83677a4
do., 24 de abr. de 2022  1:33:31: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  14|5
total_score: 20/70
e5e8cfe
do., 24 de abr. de 2022  1:43:59: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:105:15: error: unused variable 'ub' [-Werror=unused-variable]
     TreeNode *ub = aux;
               ^~
cc1.exe: all warnings being treated as errors
Compilation failed
4bae1b5
do., 24 de abr. de 2022  1:44:21: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
db546d6
do., 24 de abr. de 2022  2:07:52: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:115:61: error: expected statement before ')' token
             if (tree->lower_than(key , aux->pair->key) == 1))
                                                             ^
treemap.c:124:13: error: 'else' without a previous 'if'
             else
             ^~~~
treemap.c:130:58: error: expected statement before ')' token
                     if  (tree->lower_than(aux , ub) == 1))
                                                          ^
Compilation failed
0d56eb2
do., 24 de abr. de 2022  2:08:31: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:130:58: error: expected statement before ')' token
                     if  (tree->lower_than(aux , ub) == 1))
                                                          ^
Compilation failed
3c619a7
do., 24 de abr. de 2022  2:08:49: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e6a301c
do., 24 de abr. de 2022  2:14:32: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
8f8f6a5
do., 24 de abr. de 2022  2:17:11: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
840089b
do., 24 de abr. de 2022 14:00:01: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c:104:21: error: 'tree' undeclared here (not in a function)
     TreeNode *aux = tree->root;
                     ^~~~
treemap.c:107:5: error: expected identifier or '(' before 'if'
     if (aux->pair->key == key)
     ^~
treemap.c:111:5: error: expected identifier or '(' before 'else'
     else
     ^~~~
treemap.c:134:5: error: expected identifier or '(' before 'return'
     return NULL;
     ^~~~~~
treemap.c:135:1: error: expected identifier or '(' before '}' token
 }
 ^
Compilation failed
64c91ab
do., 24 de abr. de 2022 14:00:34: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
C:\Users\MAITEV~1\AppData\Local\Temp\cc0fRbZs.o:test.c:(.text+0x107e): undefined reference to `upperBound'
C:\Users\MAITEV~1\AppData\Local\Temp\cc0fRbZs.o:test.c:(.text+0x1135): undefined reference to `upperBound'
C:\Users\MAITEV~1\AppData\Local\Temp\cc0fRbZs.o:test.c:(.text+0x1211): undefined reference to `upperBound'
C:\Users\MAITEV~1\AppData\Local\Temp\cc0fRbZs.o:test.c:(.text+0x12ed): undefined reference to `upperBound'
collect2.exe: error: ld returned 1 exit status
Compilation failed
c054462
do., 24 de abr. de 2022 14:01:28: 
 treemap.c | 32 ++------------------------------
 1 file changed, 2 insertions(+), 30 deletions(-)
 tests:  0|0
482fcec
do., 24 de abr. de 2022 14:05:21: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
ce213e5
do., 24 de abr. de 2022 14:09:49: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|5
total_score: 20/70
b61403c
do., 24 de abr. de 2022 14:15:39: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
0cb942b
do., 24 de abr. de 2022 14:17:36: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  14|5
total_score: 20/70
5031a76
do., 24 de abr. de 2022 14:22:26: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  14|5
total_score: 20/70
e6fcdf3
